Get Data Button
- Get data button
- Data fetch time

--- a/211123_GustavoGomez/211123_GustavoGomez/Views/Home/Index.cshtml
+++ b/211123_GustavoGomez/211123_GustavoGomez/Views/Home/Index.cshtml
@@ -8,6 +8,14 @@
     <h1 class="display-4">Api Data</h1>
 </div>
 
+<div class="container">
+    <form asp-controller="Home" asp-action="Index" method="get">
+        <p>            
+            <input class="btn btn-light" type="submit" value="Get Data" />
+        </p>
+    </form>
+</div>
+
 <div class="container pt-2">
 
     <table class="table">
@@ -42,5 +50,9 @@
             }
         </tbody>
     </table>
+</div>
+
+<div class="container">
+    <span class="badge bg-light text-dark">Data fetch time: @ViewData["Date"]</span>
 </div>
 
